4.4.1/readme_rewrite.md
# Chill Env Sync（实时天气同步插件）

[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![.NET Framework 4.7.2](https://img.shields.io/badge/.NET%20Framework-4.7.2-blue.svg)](https://dotnet.microsoft.com/download/dotnet-framework/net472)
[![BepInEx](https://img.shields.io/badge/BepInEx-Plugin-green.svg)](https://github.com/BepInEx/BepInEx)

一个用于游戏 《*放松时光：与你共享Lo-Fi故事*》 的实时天气同步 BepInEx 插件，可以根据真实世界的天气情况自动调整游戏内的环境效果，或基于现实时间模拟昼夜循环。

---

[![Chill with You](https://github.com/Small-tailqwq/RealTimeWeatherMod/blob/v4.4.1/header_schinese.jpg)](https://store.steampowered.com/app/3548580/)

---



> 所有代码均由AI编写，人工仅作反编译和排错处理。
> 这是我第一次用AI为UE游戏做MOD，有问题请反馈，虽然反馈了我也是再去找AI修就是了🫥



## ✨ 主要功能

- 🌤️ **实时天气同步**：通过心知天气 API 获取真实天气数据，自动调整游戏内环境
- 🌍 **多城市支持**：支持任意城市的天气查询（拼音或中文）
- 🌓 **昼夜循环**：根据配置的日出日落时间自动切换白天/黄昏/夜晚场景
- 🔓 **解锁所有环境**：自动解锁所有环境和装饰品
  - 此选项不会影响存档，仅在当前游戏会话中生效
  - 可选配置项
	- `UnlockAllEnvironments`：是否解锁所有环境
	- `UnlockAllDecorations`： 是否解锁所有装饰品
- ⌨️ **快捷键操作**：
  - `F7` - 强制刷新天气
	- 忽略缓存，强制从心知天气 API 获取最新的实时天气数据。
	- 重置 API 慢钟计时器。
  - `F8` - 显示当前状态
	- 在日志中输出一条信息，没啥用
  - `F9` - 手动触发同步
	- 使用当前已有的天气缓存和实时的本地时间，强制重新计算并应用游戏环境

## ⚠️ 免责声明

- 💽**外挂嫌疑**：本插件会默认修改游戏中的环境和装饰品解锁状态，但是**不会写入存档**。如果你打算自己解锁，还请自己调整配置文件（详见下文）。
- 💥**莫名冲突**：如果未来游戏更新或者mod大井喷，本插件很可能与其他插件发生冲突，因为我也知道我和AI配合写得很烂，届时还请别抱太大修复希望。
- 💸**仅供学习**：本插件仅供学习和交流使用，请勿用于任何商业用途
- 🧷**外部链接**：本插件使用了第三方天气 API 服务，使用时请注意隐私和数据安全。且该第三方数据服务提供范围请以实际为准。
- 😵‍💫**粗制滥造**：本插件完全由AI编写，可能存在各种问题和漏洞，请谨慎使用。
- 🤖**智械危机**：使用本插件可能会加速AI统治世界的进程，后果自负。（<---这段不是我自己写的）


## 🎮 支持的环境类型

### 基础环境（互斥）
- ☀️ 白天 (Day)
- 🌅 黄昏 (Sunset)
- 🌙 夜晚 (Night)
- ☁️ 阴天 (Cloudy)

### 降水效果（可叠加在阴天上）
- 🌧️ 小雨 (LightRain)
- 🌧️ 大雨 (HeavyRain)
- ⛈️ 雷雨 (ThunderRain)
- ❄️ 雪 (Snow)
- 💨 风 (Wind)

### TODO（这段也是人工写的）
游戏内有很多种效果，后面可能会对主模块进行重构，拆分为多个模块，提供更多的规则
例如：
- [x] 基础功能优化
- [ ] 根据季节、天气等因素展示B类风景
- [ ] 根据季节、时间等因素展示C类风景
- [ ] 根据时间、季节等因素自动触发背景音乐
- [ ] 诸如此类，反正经可能把能用的都用上

## 📦 安装方法

### 前置要求
- 游戏本体
- [BepInEx 5.x](https://github.com/BepInEx/BepInEx/releases) 或更高版本

### 安装步骤

1. 确保已正确安装 BepInEx 框架
2. 将 `ChillEnvSync.dll` 放入 `BepInEx/plugins/` 目录
3. 启动游戏，插件将自动加载
4. （可选）编辑配置文件以启用天气 API 同步

## ⚙️ 配置说明

首次运行后，配置文件将生成在 `BepInEx/config/chillwithyou.envsync.cfg`

### 配置项说明

```ini
[TimeConfig]
# 日出时间（格式：HH:mm）
Sunrise = 06:30

# 日落时间（格式：HH:mm）
Sunset = 18:30

[Unlock]

## 是否自动解锁所有环境场景
UnlockAllEnvironments = true

## 是否自动解锁所有装饰品
UnlockAllDecorations = true

[WeatherSync]
# 天气刷新间隔（分钟）
RefreshMinutes = 30

[WeatherAPI]
# 是否启用天气 API 同步
EnableWeatherSync = false

# 心知天气 API Key（需要申请）
SeniverseKey = 

# 城市名称（拼音或中文，如：beijing、上海、ip 表示自动定位）
Location = beijing
```

### 获取心知天气 API Key

1. 访问 [心知天气开发者平台](https://www.seniverse.com/)
2. 注册账号并登录
3. 创建应用获取免费 API Key
4. 将 API Key 填入配置文件的 `SeniverseKey` 字段
5. 设置 `EnableWeatherSync = true` 启用天气同步
6. 可按需配置刷新时间，避免API调用过于频繁

## 🚀 使用方法

### 基础使用（无需 API）

插件默认会根据配置的日出日落时间自动切换环境：
- 日出到日落前 1 小时：白天
- 日落前 30 分钟到日落后 30 分钟：黄昏
- 其他时间：夜晚

### 天气同步模式（需要 API）

1. 按照上述方法配置好 API Key
2. 插件将每隔指定时间（默认 30 分钟）自动获取天气并更新环境

3. 环境映射规则：
   白天：非恶劣天气且时间为日出后
   黄昏：非恶劣天气且时间为日出前后30分钟
   夜晚：时间为日落后（无论是否非恶劣天气，夜晚不能是多云，就必须是夜晚）
   多云：恶劣天气（雨雪等）且时间为日出前
4. 恶劣天气名单：

```
4, 7, 8, 9 (多云/阴天)
11, 12, 14-20 (中雨及以上, 雷暴, 冻雨)
23-25 (中雪及以上)
26-31 (沙尘/雾)
34-36 (风暴)
```
5. 天气映射规则：

| 游戏效果代码 | 对应 API 天气 ID (参考) | 逻辑说明 |
| ------------ | ----------------------- | ------ |
|Snow|20-25 (雪/雨夹雪/暴雪)|所有的雪类，统统下雪。|
|ThunderRain	|11, 12, 16, 17, 18 (雷/暴雨)	|雷阵雨、暴雨、特大暴雨，上强度。|
|HeavyRain	|10, 14, 15 (阵雨/中雨/大雨)	|普通的下雨，量比较大。|
|LightRain	|13, 19 (小雨/冻雨)	|淅淅沥沥的小雨。|
|OFF (关闭)	|0-9, 26-39 (晴/多云/阴/雾/风)	|关键点：如果是阴天或多云，必须强制关闭所有雨雪效果！|



### 快捷键功能

- **F7**：立即强制刷新天气（跳过缓存）
	- 核心目的：
		- 忽略缓存，强制从心知天气 API 获取最新的实时天气数据。
	- 重置 API 慢钟计时器。
		- 触发行为：
			1. 清空计时器：重置下次自动请求 API 的倒计时。
			2. 强制联网：无视 CacheExpiry（60分钟缓存期），直接向 api.seniverse.com 发起 HTTP 请求。
			3. 数据更新：如果请求成功，会用新的天气数据覆盖内存中的 _cachedWeather。
			4. 自动应用：拿到新数据后，会自动调用 ApplyEnvironment 来更新游戏场景。
	- 适用场景：
		- 你觉得天气变了（比如窗外刚下雨了），但游戏里还是晴天（因为还在缓存期内）。
		- 调试 API 连接是否正常。
		- 修改了配置文件中的 Location（城市）后，想立即生效。
- **F8**：在日志中显示当前环境状态
	- 打印一条日志
- **F9**：手动触发一次天气同步
	- 核心目的：
	  - 不联网，使用当前已有的天气缓存和实时的本地时间，强制重新计算并应用游戏环境。
	  - 关键点：它会绕过“防抖动”检查（即 if (Current == Target) return），强制执行一次完整的环境切换流程（关灯 -> 开灯 -> 服务同步）。
	- 触发行为：
	  1. 读取缓存：直接读取内存中的 _cachedWeather（如果没缓存，只算时间）。
	  2. 重算时间：根据当前秒数 (DateTime.Now)，重新计算是白天、黄昏还是夜晚。
	
	  3. 暴力执行：
	
	     - 调用 ForceActivateEnvironment。
	
	     - 强制模拟点击 MainIcon（即使它看起来是亮着的）。
	
	     - 强制调用 WindowViewService.ChangeWeatherAndTime。
	
	     - 强制写入 SaveDataManager。
	- 适用场景：
	  - 修复错位：比如游戏 UI 显示是“雨天”，但画面上雨停了；或者声音还在响，但图标灭了。按 F9 可以“踢”一下游戏，让它回正。
	  - 日落/日出测试：当你觉得时间到了（比如17:30），但游戏没切黄昏（可能是快钟还没跳），按 F9 可以立即触发时间判断。
	  - 无网状态：断网时，F7 会失败，但 F9 可以用来刷新本地时间逻辑（白天/夜晚切换）。

## 🔧 技术细节

- **框架**：BepInEx 5.x
- **目标框架**：.NET Framework 4.7.2
- **使用技术/工具**：
  - Harmony 补丁（用于游戏功能注入）
  - Unity 协程（用于异步网络请求）
  - 反射（用于访问游戏内部系统）
  - dnSPY
  - 各种大语言模型

## 📝 版本历史
> 注：版本号为AI自己写的，不关我的事，我也不知道为啥它刷版本号为什么这么随意

### v4.4.1
- 守护了部分人的白天或者是黄昏
- 将小雨、小雪、阵雨、阵雪这种非恶劣天气从恶劣天气名单中移除

### v4.4.0
- 守护了这片夜空
- 重构了环境、风景推导逻辑，现在晚上永远只会是晚上，白天恶劣天气可能会是多云，也可能是白天和黄昏，谁知道呢

### v4.3.1
- 说是优化了4.3.0出现问题的原因
- 捏吗你不能修复的时候一并优化吗？

### v4.3.0
- 修复了一个在多云状态下按`F9`会导致所有环境被错误关闭的问题

### v4.2.3-V4.2.4
- 还是没修好，Gemini 出去

### v4.2.2
- 发现了一个在多云状态下按`F9`会导致所有环境被错误关闭的问题
- 然后这 Gemini 没修好

### v4.2.1
- 添加了一个调试模式，开始尝试调整调整天气ID查看对应天气切换效果（什么？你现在才开始测试？！）
- 然 Gemini 别刷版本号了

### v4.2.0
- 修复了一个按`F7`没反应的问题，加了个输出说是

### v3.7.0-v4.1.0
- 优化 `F9` 按键逻辑，优化日志提示
- 修复偶发日志卡死的状态，即使不影响使用
- 修复之前和AI沟通的错误：它一直以为黄昏要提前1小时切换，实际上是30分钟
- 优化切换逻辑（真是优化？）

> 缓存逻辑是这样的：
> - 数据存储：有一个静态变量 `_cachedWeather` 存在内存里。
> - 有效期：60 分钟 (`TimeSpan.FromMinutes(60)`).
> - 快钟 (30秒一次)：
> 	- 只读缓存。如果缓存里有数据，直接拿来用，不发网络请求（不费流量）。
> 	- 它会利用缓存里的“晴/雨”状态，重新结合“当前每一秒的时间”来判断是否该日落了。
> 	- 注：本来想让AI写定时器的，但是AI说不如这个，我不懂所以听他的
> - 慢钟 (30分钟一次)：
> 	- 强制更新。即使缓存没过期（60分钟），只要到了用户设定的刷新间隔（默认30分钟），就会尝试发起新的 API 请求来刷新数据。

### v3.6.0
- 增加解锁所有环境和装饰品可选配置项

### v3.5.0（当前版本）
- 优化按钮逻辑，采用模拟点击 MainIcon 方式
- 修复环境切换可能不生效的问题
- 改进代码结构和日志输出

### v3.4.x
- 修复部分天气效果无法关闭的问题
- 优化环境互斥逻辑

### v3.3.0 及更早版本
- 基础天气同步功能
- 从 MelonLoader 迁移至 BepInEx
- 初始版本开发
- 谁能想到用了3个不同厂商的不同AI写了一天才写出来，我累死了

详细更新日志请查看 [Git 提交记录](https://github.com/Small-tailqwq/RealTimeWeatherMod/commits/master)

## 🐛 已知问题

- 首次加载可能需要等待 15 秒后才会进行第一次环境同步
- 部分环境切换可能存在延迟
- 实际上没有测试特殊天气是否会对应切换游戏场景（等我哪天下雨再说吧☔）

## 🤝 贡献

欢迎提交 Issue 和 Pull Request！

## 📄 许可证

本项目采用 **MIT 许可证** 开源。

**⚠️ 重要声明**：
- ✅ 可以自由使用、修改和分发
- ✅ 可以用于个人学习和研究
- ❌ **禁止用于任何商业目的**
- 使用本软件产生的任何后果由使用者自行承担

详见 [LICENSE](https://github.com/Small-tailqwq/RealTimeWeatherMod/blob/v4.4.1/LICENSE) 文件。

## 👨‍💻 作者

- GitHub: [@Small-tailqwq](https://github.com/Small-tailqwq)

## 🙏 致谢

- BepInEx 团队
- Harmony 补丁库
- 心知天气 API 服务
- Google Gemini3Pro
- OpenAI ChatGPT5.1
- Claude Sonnet and Ops 4.5
- 我的肝脏和眼球还有我的屁股
	- 该换一个好椅子了
	- 整点眼药水


---

**免责声明**：本插件仅供学习交流使用，请勿用于商业用途。使用本插件产生的任何问题与作者无关。


> 我的桌上常有一盏熔岩灯